Fixed EGL compile error.